# rust-ndi-sdk

./: Cargo.toml  README.md  build.rs
examples/: 01_init.rs  02_find.rs  03_routing.rs  04_recv.rs  05_send.rs
src/: bindings.h  bindings.rs  blocking_update.rs  buffer_info.rs  enums.rs  find.rs  four_cc.rs  frame.rs  lib.rs  main.rs  receiver.rs  resolution.rs  router.rs  sdk.rs  sender.rs  source.rs  structs.rs  subsampling.rs  tally.rs  timecode.rs  util.rs
src/frame/: audio.rs  drop_guard.rs  generic.rs  metadata.rs  mod.rs  video.rs
src/structs/: buffer_info.rs  resolution.rs  subsampling.rs  tally.rs
