[package]
name = "ndi-sdk-sys"
version = "0.0.1-alpha.1"
edition = "2024"
description = "Rust bindings for the NDI SDK"
readme = "README.md"
repository = "https://github.com/deno-plc/rust-ndi-sdk"
license = "GPL-3.0-or-later"
keywords = ["ndi", "video"]

[features]
strict_assertions = []
docsrs = []

[build-dependencies]
bindgen = "0.71"
regex = "1.11.1"

[dependencies]
num = "0.4.3"
num_enum = "0.7.3"
static_assertions = "1.1.0"

[dev-dependencies]
strum = { version = "0.27.1", features = ["derive"] }
